Updated: Fixed horizontal scrolling on all modules Occurred due to animations

--- a/freelanster/src/App.css
+++ b/freelanster/src/App.css
@@ -353,6 +353,7 @@ body {
   z-index: 1;
   padding-top: 2px;
   height: 710px;
+  overflow-x: auto;
 }
 
 #Features-div h3 {
